Added more coins in config file

--- a/tradingbot/simpletradingbot/src/resources/config.json
+++ b/tradingbot/simpletradingbot/src/resources/config.json
@@ -3,5 +3,5 @@
     "limit"  : "10",
     "period": "10",
     "period_1": "50",
-    "coins": ["BTC","ETH"]
+    "coins": ["BTC","ETH", "LTC", "NEO"]
 }
